<resources>
    <string name="app_name">Interlocutor</string>
    <string name="main_menu_logo">\>INTERLOCUTOR_</string>
    <string name="main_menu_button_caption_play">PLAY</string>
    <string name="main_menu_button_caption_profile">PROFILE</string>
    <string name="main_menu_button_caption_exit">EXIT</string>
    <string name="profile_status_bar_title">Profile</string>
    <string name="profile_username_label_caption">Username</string>
    <string name="profile_username_input_hint">Type your username..</string>
    <string name="profile_contact_label_caption">Contact</string>
    <string name="profile_contact_input_hint">Type your contact info..</string>
    <string name="profile_language_label_caption">Language</string>
    <string name="profile_confirm_button_caption">Confirm</string>
    <string name="profile_confirm_error_message_invalid_data">Provided profile data is incorrect!</string>
    <string name="profile_confirm_error_message_saving_failed">Provided profile data saving was failed!</string>
    <string name="profile_confirm_error_message_saving_succeed">Provided profile data has been saved!</string>
    <string name="play_activity_disconnection_message_text">Disconnection has been occurred!</string>
    <string name="play_activity_unexpected_connection_ending_message_text">Unexpected connection ending has been occurred!</string>
    <string name="play_searching_fragment_message_searching_game">Searching Game…</string>
    <string name="play_searching_fragment_message_game_found">Game Found!</string>
    <string name="play_searching_fragment_message_searching_aborted">Searching Aborted!</string>
    <string name="play_searching_button_caption_abort_searching">Cancel</string>
    <string name="play_chatting_fragment_status_bar_title">Chat</string>
    <string name="play_chatting_fragment_section_sending_message_text_hint">Type a message..</string>
    <string name="play_chatting_fragment_notification_null_message_text">Provide some text!</string>
    <string name="play_choosing_fragment_status_bar_title">Choose</string>
    <string name="play_choosing_fragment_header_title_text">Choose your favorites!</string>
    <string name="play_choosing_fragment_button_confirm_caption">Confirm</string>
    <string name="play_results_fragment_status_bar_title">Results</string>
    <string name="play_results_fragment_header_title_text">Check the results!</string>
    <string name="play_results_fragment_button_finish_caption">Finish</string>
    <string name="play_results_fragment_clipboard_contact_copied_note">User\'s contact data has been copied!</string>
    <string name="error_fragment_button_ok_caption">OK</string>
    <string name="error_main_menu_fragment_null_profile_data_source">Profile Data Source was null!</string>
    <string name="error_main_menu_fragment_null_game_service_launcher">Game Service launcher was null!</string>
    <string name="error_main_menu_fragment_null_profile_data_repository">Profile Data Repository was null!</string>
    <string name="error_main_menu_fragment_null_profile_data">Profile Data hasn\'t been provided!</string>
    <string name="error_game_service_lacking_game_processor">Game Processor hasn\'t been provided!</string>
    <string name="error_game_service_starting_searching_failed">Starting searching has been failed!</string>
    <string name="error_game_service_stopping_searching_failed">Stopping searching has been failed!</string>
    <string name="error_game_service_sending_message_failed">Sending message has been failed!</string>
    <string name="error_game_service_remote_profile_data_mapper_creation_failed">Remote Profile Data Mapper creation has been failed!</string>
    <string name="error_game_service_remote_found_game_data_mapper_creation_failed">Remote Found Game Data Mapper creation has been failed!</string>
    <string name="error_game_service_remote_found_game_data_mapping_failed">Remote Found Game Data mapping has been failed!</string>
    <string name="error_game_service_choosing_users_failed">Users choosing has been failed!</string>
    <string name="error_game_session_processor_unknown_command">Unknown command has been provided!</string>
    <string name="error_game_session_processor_searching_state_creation_failed">Searching State creation has been failed!</string>
    <string name="error_game_session_processor_chatting_state_creation_failed">Chatting State creation has been failed!</string>
    <string name="error_game_session_processor_choosing_state_creation_failed">Choosing State creation has been failed!</string>
    <string name="error_game_session_processor_results_state_creation_failed">Results State creation has been failed!</string>
    <string name="error_game_session_processor_unknown_state">Unknown state has been provided!</string>
    <string name="error_game_session_processor_illegal_state">Illegal state has been reached!</string>
    <string name="error_game_session_processor_chosen_users_setting_failed">Chosen Users setting has been failed!</string>
    <string name="error_game_session_processor_impl_unknown_operation_type">Unknown operation type has been received!</string>
    <string name="error_game_session_processor_impl_null_server_message">Received server message was null!</string>
    <string name="error_game_session_processor_impl_null_server_message_body">Received server message\'s body was null!</string>
    <string name="error_game_session_processor_impl_sending_client_message_failed">Sending a message to the server has been failed!</string>
    <string name="error_game_session_processor_impl_unknown_network_callback_command_type">Unknown Network Callback command type has been provided!</string>
    <string name="error_game_session_processor_impl_unknown_server_error">Unknown Server error has been received!</string>
    <string name="error_game_session_processor_impl_network_incorrect_profile">Incorrect Profile data has been provided!</string>
    <string name="error_game_service_broadcast_receiver_creation_failed">Game Service Broadcast Receiver creation has been failed!</string>
    <string name="error_game_service_broadcast_receiver_incorrect_command">Incorrect broadcast command has been provided!</string>
    <string name="error_game_service_broadcast_receiver_unknown_command_type">Unknown command type has been provided!</string>
    <string name="error_game_service_broadcast_receiver_lacking_profile_data">Profile data hasn\'t been provided!</string>
    <string name="error_game_service_broadcast_receiver_incorrect_profile_data">Incorrect Profile data has been provided!</string>
    <string name="error_game_service_broadcast_receiver_lacking_message_data">Message data hasn\'t been provided!</string>
    <string name="error_game_service_broadcast_receiver_incorrect_message_data">Incorrect Message data has been provided!</string>
    <string name="error_game_service_broadcast_receiver_chosen_users_data">Chosen Users data hasn\'t been fully provided!</string>
    <string name="error_main_activity_broadcast_receiver_creation_failed">Main Activity Broadcast Receiver creation has been failed!</string>
    <string name="error_main_activity_ad_banner_loading_failed">Ad Banner loading has been failed!</string>
    <string name="error_main_activity_broadcast_receiver_unknown_command_type">A command of an unknown type has been provided!</string>
    <string name="error_main_activity_broadcast_receiver_lacking_error_data">Error data hasn\'t been provided!</string>
    <string name="error_main_activity_broadcast_receiver_incorrect_error_data">Incorrect Error data has been provided!</string>
    <string name="error_play_activity_null_arguments">Arguments were null!</string>
    <string name="error_play_activity_broadcast_receiver_creation_failed">Play Activity Broadcast Receiver creation has been failed!</string>
    <string name="error_play_activity_services_start_failed">Services\' start has been failed!</string>
    <string name="error_play_activity_ad_banner_loading_failed">Ad Banner loading has been failed!</string>
    <string name="error_play_activity_broadcast_receiver_incorrect_command">Incorrect Command has been provided!</string>
    <string name="error_play_activity_broadcast_receiver_lacking_disconnection_data">Disconnection data hasn\'t been provided fully!</string>
    <string name="error_play_searching_fragment_broadcast_receiver_creation_failed">Play Searching Fragment Broadcast Receiver creation has been failed!</string>
    <string name="error_play_searching_fragment_null_arguments">Arguments were null!</string>
    <string name="error_play_searching_fragment_broadcast_receiver_incorrect_command">Incorrect command has been provided!</string>
    <string name="error_play_searching_fragment_broadcast_receiver_lacking_found_game_data">Found Game data hasn\'t been provided!</string>
    <string name="error_play_searching_fragment_broadcast_receiver_incorrect_found_game_data">Incorrect Found Game data has been provided!</string>
    <string name="error_play_chatting_fragment_broadcast_receiver_creation_failed">Play Chatting Fragment Broadcast Receiver creation has been failed!</string>
    <string name="error_play_chatting_fragment_sending_message_creation_failed">Sending Message creation has been failed!</string>
    <string name="error_play_chatting_fragment_message_adapter_creation_failed">Message Adapter creation has been failed!</string>
    <string name="error_play_chatting_fragment_broadcast_receiver_incorrect_command">Incorrect command has been provided!</string>
    <string name="error_play_chatting_fragment_broadcast_receiver_lacking_message_data">Message data hasn\'t been provided!</string>
    <string name="error_play_chatting_fragment_broadcast_receiver_incorrect_message_data">Incorrect Message data has been provided!</string>
    <string name="error_play_chatting_message_adapter_null_message">Null Message has been provided!</string>
    <string name="error_play_chatting_message_adapter_null_sender_profile">Null Sender Profile has been provided!</string>
    <string name="error_play_chatting_message_adapter_setting_view_holder_data_failed">View Holder\'s data setting has been failed!</string>
    <string name="error_play_choosing_fragment_broadcast_receiver_creation_failed">Game Choosing Broadcast Receiver creation has been failed!</string>
    <string name="error_play_choosing_fragment_user_adapter_creation_failed">Users\' Adapter creation has been failed!</string>
    <string name="error_play_choosing_fragment_user_id_contact_data_list_setting_failed">User ID - Contact Data List setting has been failed!</string>
    <string name="error_play_choosing_fragment_broadcast_receiver_incorrect_command">Incorrect command has been provided!</string>
    <string name="error_play_choosing_fragment_broadcast_receiver_lacking_user_id_contact_data_list">User Id - Contact Data hasn\'t been provided!</string>
    <string name="error_play_choosing_fragment_broadcast_receiver_invalid_user_id_contact_data_list">Incorrect User Id - Contact Data has been provided!</string>
    <string name="error_play_choosing_user_adapter_null_profile_data">Profile data hasn\'t been provided!</string>
    <string name="error_play_choosing_user_adapter_setting_data_failed">Setting Data has been failed!</string>
    <string name="error_play_choosing_user_adapter_user_chosen_state_setting_failed">User chosen state setting has been failed!</string>
    <string name="error_play_results_fragment_adapter_creation_failed">Adapter creation has been failed!</string>
    <string name="error_play_results_user_contact_adapter_null_matched_user_profile_data">Matched User Profile Data has been null!</string>
    <string name="error_play_results_user_contact_adapter_null_profile_data">Profile Data was null!</string>
    <string name="error_play_results_user_contact_adapter_data_setting_failed">Data setting has been failed!</string>
</resources>