<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_menu_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_menu_guideline_horizontal_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_menu_guideline_vertical_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/main_menu_button_container"
        app:layout_constraintRight_toRightOf="@id/main_menu_guideline_vertical_center"
        app:layout_constraintLeft_toLeftOf="@id/main_menu_guideline_vertical_center"
        android:layout_marginBottom="16dp"
        android:text="@string/main_menu_logo"
        android:fontFamily="sans-serif-medium"
        android:fontWeight="600"
        android:textColor="#5097EB"
        android:textSize="28sp"
        android:shadowColor="#77000000"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"/>

    <LinearLayout
        android:id="@+id/main_menu_button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/main_menu_guideline_vertical_center"
        app:layout_constraintLeft_toLeftOf="@id/main_menu_guideline_vertical_center"
        app:layout_constraintTop_toTopOf="@id/main_menu_guideline_horizontal_center"
        app:layout_constraintBottom_toBottomOf="@id/main_menu_guideline_horizontal_center"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_menu_button_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            style="@style/MainMenuButtonStyle"
            android:text="@string/main_menu_button_caption_play"/>

        <Button
            android:id="@+id/main_menu_button_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MainMenuButtonStyle"
            android:text="@string/main_menu_button_caption_profile"/>

        <Button
            android:id="@+id/main_menu_button_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/MainMenuButtonStyle"
            android:text="@string/main_menu_button_caption_exit"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>